# smokeping-rs

./: BACKEND_FIX_SUMMARY.md  Cargo.toml  Dockerfile  SPA_ROUTING_FIX.md  STATIC_ASSETS_FIX_SUMMARY.md  docker-compose.yml  prod.md  test_error_handling.sh  test_spa_routing.sh  test_static_assets.sh
data/: smokeping.db
docs/: influxdb-setup.md
frontend/: package-lock.json  package.json
frontend/src/components/: TargetForm.vue
frontend/src/router/: index.js
frontend/src/stores/: targets.js
frontend/src/views/: Dashboard.vue  TargetDetails.vue
src/: database.rs  influxdb.rs  main.rs
src/models/: target.rs
src/prober/: mod.rs
src/routes/: targets.rs
